--- a/BASE.html
+++ b/BASE.html
@@ -19,10 +19,6 @@
       }
     </script>
     <script src="./index.js"></script>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.2/flowbite.min.css"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <!-- NAV BAR =============================== -->
@@ -73,17 +69,17 @@
           >
             <li>
               <a
-                href="./index.html"
-                class="block py-2 pl-3 pr-4 text-red-700 bg-red-700 rounded md:bg-transparent md:text-red-700 md:p-0 dark:text-white"
+                href="#"
+                class="block py-2 pl-3 pr-4 text-white bg-red-700 rounded md:bg-transparent md:text-red-700 md:p-0 dark:text-white"
                 aria-current="page"
-                >Sākums</a
+                >Home</a
               >
             </li>
             <li>
               <a
-                href="./Drivers.html"
+                href="#"
                 class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-red-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                >Piloti</a
+                >About</a
               >
             </li>
             <li>
@@ -138,59 +134,7 @@
     </nav>
 
     <!-- VIDUS ============================ -->
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates,
-    officiis ipsum reprehenderit architecto rem vel blanditiis labore impedit
-    modi, libero reiciendis qui, enim sequi! Sed asperiores quis aliquid
-    perferendis saepe sint impedit aut ab ipsum, ut ad labore nemo quia ipsa
-    accusamus veritatis commodi eius vitae tempora veniam quasi iusto
-    voluptatibus aliquam! Ipsa sed dolor repellendus nobis rerum dolore, sint
-    non mollitia tempore, consectetur facere repudiandae ipsum temporibus
-    inventore aliquam, atque aspernatur. Praesentium iste minima impedit
-    architecto officiis magni deserunt quod omnis aut iure quisquam amet
-    molestias animi distinctio sit saepe est soluta voluptas rerum, inventore
-    voluptatem atque velit odit! Beatae sequi, repellat nisi iste voluptates
-    sint suscipit unde fugit sit debitis corrupti minus assumenda mollitia
-    ratione quisquam excepturi odit blanditiis consectetur sapiente praesentium,
-    consequuntur officia earum facilis. Dolore iure necessitatibus, quia officia
-    aspernatur modi aperiam dolores animi nostrum sit ut tenetur perferendis,
-    vitae fugiat. Iste in, voluptas atque, dicta suscipit nesciunt eum iusto ex
-    magni, magnam veniam nulla? At, officia! Molestias repellendus adipisci
-    dolorem eaque culpa pariatur odit? Dolore, voluptate, iure laudantium
-    corrupti autem praesentium corporis exercitationem animi vitae iste officia
-    totam facilis officiis ratione blanditiis aperiam nulla porro et ea
-    laboriosam fugiat. Expedita, ea exercitationem mollitia sint alias
-    dignissimos unde voluptatum, iste, doloremque voluptatibus sapiente. Tempore
-    ullam reiciendis est officia dolorem. Optio earum laboriosam alias, fuga
-    distinctio porro tenetur maiores voluptas quo, exercitationem praesentium
-    modi quam libero nesciunt corporis? Commodi dicta ullam, doloribus quas
-    corrupti excepturi saepe rerum facere doloremque, nulla expedita at quidem
-    placeat dolorem, officia necessitatibus quo accusantium iure vel fuga quod
-    quasi tenetur laboriosam nemo! Eveniet ullam, accusantium earum, sint, eaque
-    ipsa magnam quod sapiente officia at ad assumenda nisi dolorum repudiandae
-    maiores aspernatur. Iusto quas possimus quia ea praesentium. Explicabo culpa
-    voluptatum non laborum iste vitae nisi dolorum illo animi recusandae est
-    cupiditate, laudantium sequi nulla soluta optio omnis reiciendis? Ad,
-    accusantium debitis voluptatum maxime vel sunt velit accusamus veritatis
-    architecto et rerum provident sapiente aliquam neque consequuntur ipsum.
-    Sunt impedit provident dolor fugiat distinctio, dignissimos quod, tenetur
-    saepe dolore ullam, possimus eos? Totam dicta, asperiores earum voluptas
-    aperiam, ipsa illo itaque atque iure modi ullam. Nostrum, quisquam sapiente
-    eligendi possimus corporis magni aperiam tenetur inventore perspiciatis
-    enim, explicabo quasi placeat illum quas labore, accusantium tempore vitae
-    reiciendis ipsa! Eos doloremque voluptate repudiandae ab quidem accusantium
-    quis, maxime, cumque neque quibusdam dolores officiis atque quod? Explicabo
-    quam modi illum nihil ratione reiciendis ad non cum delectus obcaecati
-    doloribus vero culpa, et eligendi repudiandae expedita tempora. Provident
-    aliquam nesciunt deserunt officiis, at vitae non itaque doloribus. Excepturi
-    voluptas laboriosam possimus velit corrupti culpa deserunt aperiam.
-    Perferendis reprehenderit ab a inventore et quo doloribus repellat quae nemo
-    ducimus omnis cum quas tempore sapiente odio veritatis fuga, minus debitis,
-    quibusdam provident amet non expedita rerum dignissimos. Sapiente, quasi
-    minus perspiciatis repellendus officia molestiae corrupti harum voluptatum
-    ducimus accusantium animi fugiat excepturi quae consectetur dolor illum
-    delectus vel? Soluta porro illum officiis vitae quaerat. Sed delectus
-    assumenda, optio accusamus tempore, natus maiores nostrum, soluta atque
-    sapiente nesciunt eaque!
+
     <!-- FOOTER ======================================= -->
 
     <div
