--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- NAV BAR =============================== -->
 
     <nav
-      class="bg-gray-200 border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-600"
+      class="bg-gray-200 border-gray-200 px-2 sm:px-4 py-2.5 dark:bg-gray-600"
     >
       <div
         class="container flex flex-wrap items-center justify-between mx-auto"
