--- a/Drivers.html
+++ b/Drivers.html
@@ -1016,7 +1016,8 @@
         }
       });
     </script>
-    <!-- <script src="https://unpkg.com/flowbite@1.4.4/dist/flowbite.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.2/flowbite.js
+    "></script>
 
     <script src="./node_modules/flowbite/dist/flowbite.js"></script>
   </body>
