v5 galerija un reg

--- a/Drivers.html
+++ b/Drivers.html
@@ -75,15 +75,15 @@
             <li>
               <a
                 href="./index.html"
-                class="block py-2 pl-3 pr-4 text-red-700 bg-red-700 rounded md:bg-transparent md:text-red-700 md:p-0 dark:text-white"
-                aria-current="page"
+                class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-red-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
                 >Sākums</a
               >
             </li>
             <li>
               <a
                 href="./Drivers.html"
-                class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-red-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+                class="block py-2 pl-3 pr-4 text-red-700 bg-red-700 rounded md:bg-transparent md:text-red-700 md:p-0 dark:text-white"
+                aria-current="page"
                 >Piloti</a
               >
             </li>
@@ -729,7 +729,7 @@
               class="flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600"
             >
               <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-                Terms of Service
+                Maks Verstapens
               </h3>
               <button
                 type="button"
@@ -749,27 +749,63 @@
                     clip-rule="evenodd"
                   ></path>
                 </svg>
-                <span class="sr-only">Close modal</span>
+                <span class="sr-only">Maks Verstapens</span>
               </button>
             </div>
             <!-- Modal body -->
-            <div class="p-6 space-y-6">
-              <p
-                class="text-base leading-relaxed text-gray-500 dark:text-gray-400"
-              >
-                With less than a month to go before the European Union enacts
-                new consumer privacy laws for its citizens, companies around the
-                world are updating their terms of service agreements to comply.
-              </p>
-              <p
-                class="text-base leading-relaxed text-gray-500 dark:text-gray-400"
-              >
-                The European Union’s General Data Protection Regulation
-                (G.D.P.R.) goes into effect on May 25 and is meant to ensure a
-                common set of data rights in the European Union. It requires
-                organizations to notify users as soon as possible of high-risk
-                data breaches that could personally affect them.
-              </p>
+            <div class="p-6 space-y-4 text-xl text-center">
+              <dl>
+                <dt
+                  class="mb-2 font-bold leading-none text-gray-900 dark:text-white"
+                >
+                  Vārds Uzvārds
+                </dt>
+                <dd
+                  class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
+                >
+                  Makss Emilians Verstapens
+                </dd>
+                <dt
+                  class="mb-2 font-semibold leading-none text-gray-900 dark:text-white"
+                >
+                  Vecums / Dzimšanas datums
+                </dt>
+                <dd
+                  class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
+                >
+                  25 / 30.09.1997
+                </dd>
+                <dt
+                  class="mb-2 font-semibold leading-none text-gray-900 dark:text-white"
+                >
+                  Sacīkšu Numurs
+                </dt>
+                <dd
+                  class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
+                >
+                  #1
+                </dd>
+                <dt
+                  class="mb-2 font-semibold leading-none text-gray-900 dark:text-white"
+                >
+                  Čempiona tituli
+                </dt>
+                <dd
+                  class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
+                >
+                  2 (2021, 2022)
+                </dd>
+                <dt
+                  class="mb-2 font-semibold leading-none text-gray-900 dark:text-white"
+                >
+                  Augums / Svars
+                </dt>
+                <dd
+                  class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
+                >
+                  72kg / 186cm
+                </dd>
+              </dl>
             </div>
           </div>
         </div>
@@ -790,7 +826,7 @@
               class="flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600"
             >
               <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-                Terms of Service
+                Serhio Peress
               </h3>
               <button
                 type="button"
@@ -810,51 +846,102 @@
                     clip-rule="evenodd"
                   ></path>
                 </svg>
-                <span class="sr-only">Close modal</span>
+                <span class="sr-only">Serhio Peress</span>
               </button>
             </div>
             <!-- Modal body -->
-            <div class="p-6 space-y-6">
-              <p
-                class="text-base leading-relaxed text-gray-500 dark:text-gray-400"
-              >
-                With less than a month to go before the European Union enacts
-                new consumer privacy laws for its citizens, companies around the
-                world are updating their terms of service agreements to comply.
-              </p>
-              <p
-                class="text-base leading-relaxed text-gray-500 dark:text-gray-400"
-              >
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
-                nostrum natus, excepturi voluptatibus explicabo sint nihil
-                recusandae quasi ipsum dolores sunt fuga cum, nobis aut libero
-                minus repellat alias, quae illum. Expedita provident illo non
-                officia obcaecati laboriosam, impedit consectetur quidem iste
-                inventore porro? Ipsa temporibus doloremque molestiae animi,
-                voluptates saepe, distinctio facilis nihil nemo corporis
-                delectus. Repellat iure quidem delectus, dolores incidunt
-                aliquam! Reprehenderit magni aut totam itaque eaque magnam,
-                eveniet in quibusdam nobis numquam iure necessitatibus tempore
-                maiores facere laborum voluptas esse, quos dolorem eligendi
-                possimus aliquid quae blanditiis nostrum quas! Delectus
-                voluptates reprehenderit consequatur placeat earum, mollitia ad
-                odit error sequi, soluta fugiat modi nisi, dicta illo neque cum!
-                Explicabo sed voluptatibus ad, assumenda delectus incidunt sequi
-                facere illo similique corporis ea rerum praesentium laudantium.
-                Id voluptates voluptas exercitationem voluptatum deleniti fuga.
-                Labore doloribus aliquid adipisci, veritatis corporis
-                voluptatibus itaque ipsum optio voluptas officiis velit,
-                distinctio officia libero quos incidunt illo! Libero, odio fuga
-                quibusdam laudantium voluptatem ea provident nobis, ut sed eos
-                expedita! Totam vitae animi quod quam, odio, nulla facere quasi
-                voluptates possimus molestiae doloribus cumque excepturi numquam
-                eveniet debitis! Amet autem pariatur nobis quos molestias sequi
-                fugiat eligendi cum cumque! Aspernatur placeat esse quo.
-              </p>
+            <div class="p-6 space-y-4 text-xl text-center">
+              <dl>
+                <dt
+                  class="mb-2 font-bold leading-none text-gray-900 dark:text-white"
+                >
+                  Vārds Uzvārds
+                </dt>
+                <dd
+                  class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
+                >
+                  Serhio Mičels Peress Mendosa
+                </dd>
+                <dt
+                  class="mb-2 font-semibold leading-none text-gray-900 dark:text-white"
+                >
+                  Vecums / Dzimšanas datums
+                </dt>
+                <dd
+                  class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
+                >
+                  32 / 26.01.1990
+                </dd>
+                <dt
+                  class="mb-2 font-semibold leading-none text-gray-900 dark:text-white"
+                >
+                  Sacīkšu Numurs
+                </dt>
+                <dd
+                  class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
+                >
+                  #11
+                </dd>
+                <dt
+                  class="mb-2 font-semibold leading-none text-gray-900 dark:text-white"
+                >
+                  Čempiona tituli
+                </dt>
+                <dd
+                  class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
+                >
+                  0
+                </dd>
+                <dt
+                  class="mb-2 font-semibold leading-none text-gray-900 dark:text-white"
+                >
+                  Augums / Svars
+                </dt>
+                <dd
+                  class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
+                >
+                  63kg / 172cm
+                </dd>
+              </dl>
             </div>
           </div>
         </div>
       </div>
+      <!-- Charles Modal -->
+
+      <!-- carlos modal -->
+
+      <!-- Lewis Modal -->
+
+      <!-- George Modal -->
+
+      <!-- Lando Modal -->
+
+      <!-- Oskar modal -->
+
+      <!-- Ocon modal -->
+
+      <!-- Gasly Modal -->
+
+      <!-- BOtas modal -->
+
+      <!-- zho modal -->
+
+      <!-- Stroll modal -->
+
+      <!-- Alonso modal -->
+
+      <!-- yuki modal -->
+
+      <!-- devris modal -->
+
+      <!-- Kmag modal -->
+
+      <!-- hulk modal -->
+
+      <!-- Logan modal -->
+
+      <!-- albon modal -->
     </section>
 
     <!-- FOOTER ======================================= -->
