--- a/index.html
+++ b/index.html
@@ -138,59 +138,128 @@
     </nav>
 
     <!-- VIDUS ============================ -->
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates,
-    officiis ipsum reprehenderit architecto rem vel blanditiis labore impedit
-    modi, libero reiciendis qui, enim sequi! Sed asperiores quis aliquid
-    perferendis saepe sint impedit aut ab ipsum, ut ad labore nemo quia ipsa
-    accusamus veritatis commodi eius vitae tempora veniam quasi iusto
-    voluptatibus aliquam! Ipsa sed dolor repellendus nobis rerum dolore, sint
-    non mollitia tempore, consectetur facere repudiandae ipsum temporibus
-    inventore aliquam, atque aspernatur. Praesentium iste minima impedit
-    architecto officiis magni deserunt quod omnis aut iure quisquam amet
-    molestias animi distinctio sit saepe est soluta voluptas rerum, inventore
-    voluptatem atque velit odit! Beatae sequi, repellat nisi iste voluptates
-    sint suscipit unde fugit sit debitis corrupti minus assumenda mollitia
-    ratione quisquam excepturi odit blanditiis consectetur sapiente praesentium,
-    consequuntur officia earum facilis. Dolore iure necessitatibus, quia officia
-    aspernatur modi aperiam dolores animi nostrum sit ut tenetur perferendis,
-    vitae fugiat. Iste in, voluptas atque, dicta suscipit nesciunt eum iusto ex
-    magni, magnam veniam nulla? At, officia! Molestias repellendus adipisci
-    dolorem eaque culpa pariatur odit? Dolore, voluptate, iure laudantium
-    corrupti autem praesentium corporis exercitationem animi vitae iste officia
-    totam facilis officiis ratione blanditiis aperiam nulla porro et ea
-    laboriosam fugiat. Expedita, ea exercitationem mollitia sint alias
-    dignissimos unde voluptatum, iste, doloremque voluptatibus sapiente. Tempore
-    ullam reiciendis est officia dolorem. Optio earum laboriosam alias, fuga
-    distinctio porro tenetur maiores voluptas quo, exercitationem praesentium
-    modi quam libero nesciunt corporis? Commodi dicta ullam, doloribus quas
-    corrupti excepturi saepe rerum facere doloremque, nulla expedita at quidem
-    placeat dolorem, officia necessitatibus quo accusantium iure vel fuga quod
-    quasi tenetur laboriosam nemo! Eveniet ullam, accusantium earum, sint, eaque
-    ipsa magnam quod sapiente officia at ad assumenda nisi dolorum repudiandae
-    maiores aspernatur. Iusto quas possimus quia ea praesentium. Explicabo culpa
-    voluptatum non laborum iste vitae nisi dolorum illo animi recusandae est
-    cupiditate, laudantium sequi nulla soluta optio omnis reiciendis? Ad,
-    accusantium debitis voluptatum maxime vel sunt velit accusamus veritatis
-    architecto et rerum provident sapiente aliquam neque consequuntur ipsum.
-    Sunt impedit provident dolor fugiat distinctio, dignissimos quod, tenetur
-    saepe dolore ullam, possimus eos? Totam dicta, asperiores earum voluptas
-    aperiam, ipsa illo itaque atque iure modi ullam. Nostrum, quisquam sapiente
-    eligendi possimus corporis magni aperiam tenetur inventore perspiciatis
-    enim, explicabo quasi placeat illum quas labore, accusantium tempore vitae
-    reiciendis ipsa! Eos doloremque voluptate repudiandae ab quidem accusantium
-    quis, maxime, cumque neque quibusdam dolores officiis atque quod? Explicabo
-    quam modi illum nihil ratione reiciendis ad non cum delectus obcaecati
-    doloribus vero culpa, et eligendi repudiandae expedita tempora. Provident
-    aliquam nesciunt deserunt officiis, at vitae non itaque doloribus. Excepturi
-    voluptas laboriosam possimus velit corrupti culpa deserunt aperiam.
-    Perferendis reprehenderit ab a inventore et quo doloribus repellat quae nemo
-    ducimus omnis cum quas tempore sapiente odio veritatis fuga, minus debitis,
-    quibusdam provident amet non expedita rerum dignissimos. Sapiente, quasi
-    minus perspiciatis repellendus officia molestiae corrupti harum voluptatum
-    ducimus accusantium animi fugiat excepturi quae consectetur dolor illum
-    delectus vel? Soluta porro illum officiis vitae quaerat. Sed delectus
-    assumenda, optio accusamus tempore, natus maiores nostrum, soluta atque
-    sapiente nesciunt eaque!
+    <section class="bg-white dark:bg-gray-900">
+      <div
+        class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
+      >
+        <div class="mr-auto place-self-center lg:col-span-7">
+          <h1
+            class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white"
+          >
+            Formula 1 Latvija
+          </h1>
+          <p
+            class="max-w-2xl mb-6 font-semibold text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400"
+          >
+            Informācija un fakti par Formula 1 pilotiem, komandām trasēm
+            Latviešu valodā.
+          </p>
+        </div>
+        <div class="lg:mt-0 lg:col-span-5 lg:flex">
+          <img src="./img/f1 generic.jpg" alt="mockup" />
+        </div>
+      </div>
+    </section>
+
+    <!-- GALERIJA -->
+    <section class="bg-white dark:bg-gray-900">
+      <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
+        <div class="max-w-screen-md mb-8 lg:mb-16">
+          <h2
+            class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"
+          >
+            Dažas no labākajām F1 bildēm
+          </h2>
+        </div>
+        <div
+          class="space-y-8 md:grid md:grid-cols-2 lg:grid-cols-2 md:gap-12 md:space-y-0 sm:p-2"
+        >
+          <div class="p-5">
+            <img src="./img/pci1.jpg" alt="" />
+          </div>
+          <div class="p-5">
+            <img src="./img/pic2.jpg" alt="" />
+          </div>
+          <div class="p-5">
+            <img src="./img/pic3.jpg" alt="" />
+          </div>
+          <div class="p-5">
+            <img src="./img/image.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- REGISTRACIJA EMAILAM -->
+    <section class="bg-gray-50 dark:bg-gray-900">
+      <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto">
+        <a
+          href="#"
+          class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white"
+        >
+          <img class="w- h-10 mr-2" src="/img/download.jpg" alt="logo" />
+          Formula 1 Latvija
+        </a>
+        <div
+          class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
+        >
+          <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+            <h1
+              class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white"
+            >
+              Saņem jaunākās ziņas savā ēpastā
+            </h1>
+            <form class="space-y-4 md:space-y-6" action="#">
+              <div>
+                <label
+                  for="email"
+                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                  >Jūsu ēpasts</label
+                >
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                  placeholder="vards@epasts.lv"
+                  required=""
+                />
+              </div>
+
+              <div class="flex items-start">
+                <div class="flex items-center h-5">
+                  <input
+                    id="terms"
+                    aria-describedby="terms"
+                    type="checkbox"
+                    class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
+                    required=""
+                  />
+                </div>
+                <div class="ml-3 text-sm">
+                  <label
+                    for="terms"
+                    class="font-light text-gray-500 dark:text-gray-300"
+                    >Es piekrītu
+                    <a
+                      class="font-medium text-primary-600 hover:underline dark:text-primary-500"
+                      href="#"
+                      >Noteikumiem un nosacījumiem</a
+                    ></label
+                  >
+                </div>
+              </div>
+              <button
+                type="submit"
+                class="w-full text-red-600 bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+              >
+                Reģistrēties
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- FOOTER ======================================= -->
 
     <div
